Closed
Bug 1659324
Opened 5 years ago
Closed 5 years ago
SWGL crashes when sampling null texture data
Categories
(Core :: Graphics: WebRender, defect)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
81 Branch
Tracking | Status | |
---|---|---|
firefox81 | --- | fixed |
People
(Reporter: lsalzman, Assigned: lsalzman)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
Sometimes if a RenderTextureHost generates invalid texture data, SWGL can end up sampling null texture data and thus crash. We need to supply some junk texture data to sample to work around this...
Assignee | ||
Comment 1•5 years ago
|
||
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4588aab7372a
return transparent black when sampling null SWGL texture. r=jimb
Comment 3•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox81:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
Updated•5 years ago
|
Blocks: sw-wr-stability
Updated•5 years ago
|
No longer blocks: sw-wr-correctness
You need to log in
before you can comment on or make changes to this bug.
Description
•