Bug 1659324 - return transparent black when sampling null SWGL texture. r=jimb

Differential Revision: https://phabricator.services.mozilla.com/D87190